avcodec/mjpegdec: Switch default interlaced polarity for MJPG to 1

Fixes Ticket3229

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>
(cherry picked from commit dde16f5aaed327e15049b40a8dfae1f59647e4ec)

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>